# nyc-citi-bike-daily-demand-forecast

./: .gitignore  README.md  main.py  pyproject.toml
models/: daily_ridership_model_lightgbm.joblib
notebooks/: 1 Unzipping the Dataset.ipynb  2 Processing time series data.ipynb  3 EDA.ipynb  4 Time Series Modeling.ipynb
