[project]
name = "nyc-citi-bike-daily-demand-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]
